TDD: add new test job + failing test
also, clean up some warnings in build.gradle.kts